Partion and coalesce

--- a/RDD/M11_Case/M1_Case.ipynb
+++ b/RDD/M11_Case/M1_Case.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7742e005",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2f54f4e4",
    "metadata": {},
    "outputs": [
@@ -21,8 +21,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/03/23 16:25:34 WARN Utils: Your hostname, ZSCHN01LP0253L resolves to a loopback address: 127.0.1.1; using 192.168.229.237 instead (on interface wlp0s20f3)\n",
-      "23/03/23 16:25:34 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+      "23/04/04 12:37:15 WARN Utils: Your hostname, ZSCHN01LP0253L resolves to a loopback address: 127.0.1.1; using 192.168.1.5 instead (on interface wlp0s20f3)\n",
+      "23/04/04 12:37:15 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
      ]
     },
     {
@@ -37,21 +37,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/03/23 16:25:35 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "23/03/23 16:25:35 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
-      "23/03/23 16:25:35 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n",
-      "23/03/23 16:25:35 WARN Utils: Service 'SparkUI' could not bind on port 4042. Attempting port 4043.\n",
-      "23/03/23 16:25:35 WARN Utils: Service 'SparkUI' could not bind on port 4043. Attempting port 4044.\n",
-      "23/03/23 16:25:35 WARN Utils: Service 'SparkUI' could not bind on port 4044. Attempting port 4045.\n",
-      "23/03/23 16:25:35 WARN Utils: Service 'SparkUI' could not bind on port 4045. Attempting port 4046.\n",
-      "23/03/23 16:25:35 WARN Utils: Service 'SparkUI' could not bind on port 4046. Attempting port 4047.\n",
-      "23/03/23 16:25:35 WARN Utils: Service 'SparkUI' could not bind on port 4047. Attempting port 4048.\n",
-      "23/03/23 16:25:35 WARN Utils: Service 'SparkUI' could not bind on port 4048. Attempting port 4049.\n",
-      "23/03/23 16:25:35 WARN Utils: Service 'SparkUI' could not bind on port 4049. Attempting port 4050.\n",
-      "23/03/23 16:25:35 WARN Utils: Service 'SparkUI' could not bind on port 4050. Attempting port 4051.\n",
-      "23/03/23 16:25:35 WARN Utils: Service 'SparkUI' could not bind on port 4051. Attempting port 4052.\n",
-      "23/03/23 16:25:35 WARN Utils: Service 'SparkUI' could not bind on port 4052. Attempting port 4053.\n",
-      "23/03/23 16:25:35 WARN Utils: Service 'SparkUI' could not bind on port 4053. Attempting port 4054.\n"
+      "23/04/04 12:37:15 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "23/04/04 12:37:16 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
+      "23/04/04 12:37:16 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n"
      ]
     },
     {
@@ -64,7 +52,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://192.168.229.237:4054\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://192.168.1.5:4042\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -80,10 +68,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f600491e6a0>"
+       "<pyspark.sql.session.SparkSession at 0x7effba1590d0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "ebb1d892",
    "metadata": {},
    "outputs": [
@@ -121,13 +109,13 @@
     }
    ],
    "source": [
-    "empDf = spark.read.option(\"header\",True).option(\"inferSchema\",True).csv(\"../Spark-main/employees.csv\")\n",
+    "empDf = spark.read.option(\"header\",True).option(\"inferSchema\",True).csv(\"../../Spark-main/employees.csv\")\n",
     "empDf.printSchema()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "20f8a369",
    "metadata": {},
    "outputs": [],
@@ -145,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "36b5b3ed",
    "metadata": {},
    "outputs": [
