--- a/RDD/M18_JSON/M1_JSON.ipynb
+++ b/RDD/M18_JSON/M1_JSON.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d76e98a1",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "6533da35",
    "metadata": {},
    "outputs": [
@@ -21,8 +21,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/04/04 23:43:04 WARN Utils: Your hostname, ZSCHN01LP0253L resolves to a loopback address: 127.0.1.1; using 192.168.1.5 instead (on interface wlp0s20f3)\n",
-      "23/04/04 23:43:04 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+      "23/04/06 12:35:31 WARN Utils: Your hostname, ZSCHN01LP0253L resolves to a loopback address: 127.0.1.1; using 192.168.1.5 instead (on interface wlp0s20f3)\n",
+      "23/04/06 12:35:31 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
      ]
     },
     {
@@ -37,12 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/04/04 23:43:04 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "23/04/04 23:43:05 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
-      "23/04/04 23:43:05 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n",
-      "23/04/04 23:43:05 WARN Utils: Service 'SparkUI' could not bind on port 4042. Attempting port 4043.\n",
-      "23/04/04 23:43:05 WARN Utils: Service 'SparkUI' could not bind on port 4043. Attempting port 4044.\n",
-      "23/04/04 23:43:05 WARN Utils: Service 'SparkUI' could not bind on port 4044. Attempting port 4045.\n"
+      "23/04/06 12:35:31 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     },
     {
@@ -55,7 +50,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://192.168.1.5:4045\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://192.168.1.5:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -71,10 +66,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f94a41e9190>"
+       "<pyspark.sql.session.SparkSession at 0x7fa2200de7c0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,60 +81,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "77dec100",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----------+----------+---------+--------+------------+---------+--------+------+--------------+----------+-------------+\n",
-      "|EMPLOYEE_ID|FIRST_NAME|LAST_NAME|   EMAIL|PHONE_NUMBER|HIRE_DATE|  JOB_ID|SALARY|COMMISSION_PCT|MANAGER_ID|DEPARTMENT_ID|\n",
-      "+-----------+----------+---------+--------+------------+---------+--------+------+--------------+----------+-------------+\n",
-      "|        198|    Donald| OConnell|DOCONNEL|650.507.9833|21-JUN-07|SH_CLERK|  2600|            - |       124|           50|\n",
-      "+-----------+----------+---------+--------+------------+---------+--------+------+--------------+----------+-------------+\n",
-      "only showing top 1 row\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "empDf = spark.read.option(\"header\",True).option(\"infrechema\",True).csv(\"../../Spark-main/employees.csv\")\n",
-    "empDf.show(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "ba55da3c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------------+---------------+----------+-----------+\n",
-      "|DEPARTMENT_ID|DEPARTMENT_NAME|MANAGER_ID|LOCATION_ID|\n",
-      "+-------------+---------------+----------+-----------+\n",
-      "|           10| Administration|       200|       1700|\n",
-      "+-------------+---------------+----------+-----------+\n",
-      "only showing top 1 row\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "deptDf = spark.read.option(\"header\",True).option(\"infrechema\",True).csv(\"../../Spark-main/departments.csv\")\n",
-    "deptDf.show(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "528b9f4f",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "[Stage 0:>                                                          (0 + 1) / 1]\r",
+      "\r",
+      "                                                                                \r"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -162,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "c653e091",
    "metadata": {},
    "outputs": [
@@ -186,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "f2fdb42f",
    "metadata": {},
    "outputs": [
@@ -211,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "3957cc27",
    "metadata": {},
    "outputs": [
@@ -241,18 +196,28 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'explode' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [10]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m jsonDf\u001b[38;5;241m.\u001b[39mselect(jsonDf\u001b[38;5;241m.\u001b[39mText1, \u001b[43mexplode\u001b[49m(jsonDf\u001b[38;5;241m.\u001b[39mArray1))\u001b[38;5;241m.\u001b[39mshow()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'explode' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+---+\n",
+      "|Text1|col|\n",
+      "+-----+---+\n",
+      "|Hello|  7|\n",
+      "|Hello|  8|\n",
+      "|Hello|  9|\n",
+      "| This| 70|\n",
+      "| This| 88|\n",
+      "| This| 91|\n",
+      "|  Yes|  1|\n",
+      "|  Yes|  2|\n",
+      "|  Yes|  3|\n",
+      "+-----+---+\n",
+      "\n"
      ]
     }
    ],
    "source": [
+    "from pyspark.sql.functions import explode\n",
     "jsonDf.select(jsonDf.Text1, explode(jsonDf.Array1)).show()"
    ]
   },
