Renamed data directory

--- a/RDD/M3_Select/M1_Select.ipynb
+++ b/RDD/M3_Select/M1_Select.ipynb
@@ -21,8 +21,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/04/04 10:27:50 WARN Utils: Your hostname, ZSCHN01LP0253L resolves to a loopback address: 127.0.1.1; using 192.168.1.5 instead (on interface wlp0s20f3)\n",
-      "23/04/04 10:27:50 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+      "23/06/26 14:32:25 WARN Utils: Your hostname, ZSCHN01LP0253L resolves to a loopback address: 127.0.1.1; using 172.17.0.1 instead (on interface docker0)\n",
+      "23/06/26 14:32:25 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
      ]
     },
     {
@@ -37,8 +37,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/04/04 10:27:50 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "23/04/04 10:27:51 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
+      "23/06/26 14:32:25 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "23/06/26 14:32:26 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
+      "23/06/26 14:32:26 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n",
+      "23/06/26 14:32:26 WARN Utils: Service 'SparkUI' could not bind on port 4042. Attempting port 4043.\n",
+      "23/06/26 14:32:26 WARN Utils: Service 'SparkUI' could not bind on port 4043. Attempting port 4044.\n"
      ]
     },
     {
@@ -51,7 +54,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://192.168.1.5:4041\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://172.17.0.1:4044\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -67,7 +70,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f61442c4760>"
+       "<pyspark.sql.session.SparkSession at 0x7f533cc57580>"
       ]
      },
      "execution_count": 2,
@@ -546,43 +549,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-----------+----------+------+\n",
-      "|EMPLOYEE_ID|FIRST_NAME|SALARY|\n",
-      "+-----------+----------+------+\n",
-      "|        198|    Donald|  1600|\n",
-      "|        199|   Douglas|  1600|\n",
-      "|        200|  Jennifer|  3400|\n",
-      "|        201|   Michael| 12000|\n",
-      "|        202|       Pat|  5000|\n",
-      "|        203|     Susan|  5500|\n",
-      "|        204|   Hermann|  9000|\n",
-      "|        205|   Shelley| 11008|\n",
-      "|        206|   William|  7300|\n",
-      "|        100|    Steven| 23000|\n",
-      "|        101|     Neena| 16000|\n",
-      "|        102|       Lex| 16000|\n",
-      "|        103| Alexander|  8000|\n",
-      "|        104|     Bruce|  5000|\n",
-      "|        105|     David|  3800|\n",
-      "|        106|     Valli|  3800|\n",
-      "|        107|     Diana|  3200|\n",
-      "|        108|     Nancy| 11008|\n",
-      "|        109|    Daniel|  8000|\n",
-      "|        110|      John|  7200|\n",
-      "+-----------+----------+------+\n",
+      "+-----------+----------+----------+\n",
+      "|EMPLOYEE_ID|FIRST_NAME|NEW_SALARY|\n",
+      "+-----------+----------+----------+\n",
+      "|        198|    Donald|      1600|\n",
+      "|        199|   Douglas|      1600|\n",
+      "|        200|  Jennifer|      3400|\n",
+      "|        201|   Michael|     12000|\n",
+      "|        202|       Pat|      5000|\n",
+      "|        203|     Susan|      5500|\n",
+      "|        204|   Hermann|      9000|\n",
+      "|        205|   Shelley|     11008|\n",
+      "|        206|   William|      7300|\n",
+      "|        100|    Steven|     23000|\n",
+      "|        101|     Neena|     16000|\n",
+      "|        102|       Lex|     16000|\n",
+      "|        103| Alexander|      8000|\n",
+      "|        104|     Bruce|      5000|\n",
+      "|        105|     David|      3800|\n",
+      "|        106|     Valli|      3800|\n",
+      "|        107|     Diana|      3200|\n",
+      "|        108|     Nancy|     11008|\n",
+      "|        109|    Daniel|      8000|\n",
+      "|        110|      John|      7200|\n",
+      "+-----------+----------+----------+\n",
       "only showing top 20 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "empDf.withColumn(\"SALARY\",col(\"SALARY\") - 1000).select(\"EMPLOYEE_ID\",\"FIRST_NAME\",\"SALARY\").show()"
+    "empDf.withColumn(\"NEW_SALARY\",col(\"SALARY\") - 1000).select(\"EMPLOYEE_ID\",\"FIRST_NAME\",\"NEW_SALARY\").show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "546dd407",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a4caa8b",
    "metadata": {},
    "outputs": [],
    "source": []
