--- a/RDD/M6_Filter/M1_Restrictions.ipynb
+++ b/RDD/M6_Filter/M1_Restrictions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "id": "49536d98",
    "metadata": {},
    "outputs": [],
@@ -13,34 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "86b127a5",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23/04/07 10:06:30 WARN Utils: Your hostname, ZSCHN01LP0253L resolves to a loopback address: 127.0.1.1; using 192.168.1.5 instead (on interface wlp0s20f3)\n",
-      "23/04/07 10:06:30 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23/04/07 10:06:30 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "23/04/07 10:06:31 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -51,7 +27,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://192.168.1.5:4041\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://172.17.0.1:4041\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -67,10 +43,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f3f6c02b640>"
+       "<pyspark.sql.session.SparkSession at 0x7f0ac4173430>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "c2cee4b1",
    "metadata": {},
    "outputs": [
@@ -114,7 +90,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
+   "id": "ea1583ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+----------+---------+--------+------------+---------+--------+------+--------------+----------+-------------+\n",
+      "|EMPLOYEE_ID|FIRST_NAME|LAST_NAME|   EMAIL|PHONE_NUMBER|HIRE_DATE|  JOB_ID|SALARY|COMMISSION_PCT|MANAGER_ID|DEPARTMENT_ID|\n",
+      "+-----------+----------+---------+--------+------------+---------+--------+------+--------------+----------+-------------+\n",
+      "|        198|    Donald| OConnell|DOCONNEL|650.507.9833|21-JUN-07|SH_CLERK|  2600|            - |       124|           50|\n",
+      "|        199|   Douglas|    Grant|  DGRANT|650.507.9844|13-JAN-08|SH_CLERK|  2600|            - |       124|           50|\n",
+      "|        200|  Jennifer|   Whalen| JWHALEN|515.123.4444|17-SEP-03| AD_ASST|  4400|            - |       101|           10|\n",
+      "|        201|   Michael|Hartstein|MHARTSTE|515.123.5555|17-FEB-04|  MK_MAN| 13000|            - |       100|           20|\n",
+      "|        202|       Pat|      Fay|    PFAY|603.123.6666|17-AUG-05|  MK_REP|  6000|            - |       201|           20|\n",
+      "+-----------+----------+---------+--------+------------+---------+--------+------+--------------+----------+-------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "empDf.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "1d7ac70d",
    "metadata": {},
    "outputs": [
@@ -125,7 +129,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [18]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#Note : follow the Select Steps\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m empDf\u001b[38;5;241m.\u001b[39mfilter(\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mSALARY\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m<\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m5000\u001b[39;49m)\u001b[38;5;241m.\u001b[39mshow(\u001b[38;5;241m1\u001b[39m)\n",
+      "Input \u001b[0;32mIn [29]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#Note : follow the Select Steps\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m empDf\u001b[38;5;241m.\u001b[39mfilter(\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mSALARY\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m<\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m5000\u001b[39;49m)\u001b[38;5;241m.\u001b[39mshow(\u001b[38;5;241m1\u001b[39m)\n",
       "\u001b[0;31mTypeError\u001b[0m: '<' not supported between instances of 'str' and 'int'"
      ]
     }
@@ -137,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "id": "504f88a5",
    "metadata": {},
    "outputs": [
@@ -161,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "id": "9af9ad0d",
    "metadata": {},
    "outputs": [
@@ -185,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "id": "5dbc7fea",
    "metadata": {},
    "outputs": [
@@ -209,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "id": "fb9e1886",
    "metadata": {},
    "outputs": [
@@ -234,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "id": "3b9a4864",
    "metadata": {},
    "outputs": [
@@ -258,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "id": "6e8fd740",
    "metadata": {},
    "outputs": [
@@ -282,7 +286,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
+   "id": "ded89321",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+----------+------+-------------+\n",
+      "|EMPLOYEE_ID|FIRST_NAME|SALARY|DEPARTMENT_ID|\n",
+      "+-----------+----------+------+-------------+\n",
+      "|        198|    Donald|  2600|           50|\n",
+      "+-----------+----------+------+-------------+\n",
+      "only showing top 1 row\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "empDf.filter(\"DEPARTMENT_ID == 50 and SALARY < 5000\").select(\"EMPLOYEE_ID\",\"FIRST_NAME\",\"SALARY\",\"DEPARTMENT_ID\").show(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92b14490",
+   "metadata": {},
+   "source": [
+    "### Not"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "id": "a08c9328",
    "metadata": {},
    "outputs": [
@@ -306,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "id": "40ca6f0d",
    "metadata": {},
    "outputs": [
@@ -329,33 +365,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "ded89321",
+   "cell_type": "markdown",
+   "id": "06a32f95",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----------+----------+------+-------------+\n",
-      "|EMPLOYEE_ID|FIRST_NAME|SALARY|DEPARTMENT_ID|\n",
-      "+-----------+----------+------+-------------+\n",
-      "|        198|    Donald|  2600|           50|\n",
-      "+-----------+----------+------+-------------+\n",
-      "only showing top 1 row\n",
-      "\n"
-     ]
-    }
-   ],
    "source": [
-    "empDf.filter(\"DEPARTMENT_ID == 50 and SALARY < 5000\").select(\"EMPLOYEE_ID\",\"FIRST_NAME\",\"SALARY\",\"DEPARTMENT_ID\").show(1)"
+    "#### Note : we can't do like this"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "3aa366ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data.filter(data.SALARY !> 5000).show(1)\n",
+    "# data.filter(data[\"SALARY\"] !> 5000).show(1)\n",
+    "# data.filter(col(\"SALARY\") !> 5000).show(1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d5cdec3",
+   "id": "5582768b",
    "metadata": {},
    "outputs": [],
    "source": []
