--- a/RDD/M7_DropDuplicate/M1_Distinct_&_DropDuplicate.ipynb
+++ b/RDD/M7_DropDuplicate/M1_Distinct_&_DropDuplicate.ipynb
@@ -21,8 +21,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/03/23 14:20:01 WARN Utils: Your hostname, ZSCHN01LP0253L resolves to a loopback address: 127.0.1.1; using 192.168.229.237 instead (on interface wlp0s20f3)\n",
-      "23/03/23 14:20:01 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+      "23/06/25 11:55:04 WARN Utils: Your hostname, ZSCHN01LP0253L resolves to a loopback address: 127.0.1.1; using 192.168.1.6 instead (on interface wlp0s20f3)\n",
+      "23/06/25 11:55:04 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
      ]
     },
     {
@@ -37,17 +37,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/03/23 14:20:02 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "23/03/23 14:20:02 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
-      "23/03/23 14:20:02 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n",
-      "23/03/23 14:20:02 WARN Utils: Service 'SparkUI' could not bind on port 4042. Attempting port 4043.\n",
-      "23/03/23 14:20:02 WARN Utils: Service 'SparkUI' could not bind on port 4043. Attempting port 4044.\n",
-      "23/03/23 14:20:02 WARN Utils: Service 'SparkUI' could not bind on port 4044. Attempting port 4045.\n",
-      "23/03/23 14:20:02 WARN Utils: Service 'SparkUI' could not bind on port 4045. Attempting port 4046.\n",
-      "23/03/23 14:20:02 WARN Utils: Service 'SparkUI' could not bind on port 4046. Attempting port 4047.\n",
-      "23/03/23 14:20:02 WARN Utils: Service 'SparkUI' could not bind on port 4047. Attempting port 4048.\n",
-      "23/03/23 14:20:02 WARN Utils: Service 'SparkUI' could not bind on port 4048. Attempting port 4049.\n",
-      "23/03/23 14:20:02 WARN Utils: Service 'SparkUI' could not bind on port 4049. Attempting port 4050.\n"
+      "23/06/25 11:55:04 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "23/06/25 11:55:04 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
+      "23/06/25 11:55:04 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n"
      ]
     },
     {
@@ -60,7 +52,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://192.168.229.237:4050\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://192.168.1.6:4042\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -76,7 +68,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f5f9c1f47c0>"
+       "<pyspark.sql.session.SparkSession at 0x7fee13b64370>"
       ]
      },
      "execution_count": 2,
@@ -92,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e0c4c15a",
    "metadata": {},
    "outputs": [
@@ -117,7 +109,7 @@
     }
    ],
    "source": [
-    "empDf = spark.read.option(\"header\",True).option(\"inferSchema\",True).csv(\"../Spark-main/employees.csv\")\n",
+    "empDf = spark.read.option(\"header\",True).option(\"inferSchema\",True).csv(\"../../Spark-main/employees.csv\")\n",
     "empDf.printSchema()"
    ]
   },
@@ -161,7 +153,7 @@
     }
    ],
    "source": [
-    "#Note : In distinct we can't pass parameter\n",
+    "#Notes : In distinct we can't pass parameter\n",
     "empDf.distinct().show()"
    ]
   },
