Distinct and Drop duplicates added

--- a/RDD/M1_CreatingDataFrame/M1_CreatingDataFrame.ipynb
+++ b/RDD/M1_CreatingDataFrame/M1_CreatingDataFrame.ipynb
@@ -25,8 +25,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/04/03 15:21:36 WARN Utils: Your hostname, ZSCHN01LP0253L resolves to a loopback address: 127.0.1.1; using 192.168.43.237 instead (on interface wlp0s20f3)\n",
-      "23/04/03 15:21:36 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+      "23/07/02 08:28:28 WARN Utils: Your hostname, ZSCHN01LP0253L resolves to a loopback address: 127.0.1.1; using 192.168.1.6 instead (on interface wlp0s20f3)\n",
+      "23/07/02 08:28:28 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
      ]
     },
     {
@@ -41,8 +41,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/04/03 15:21:36 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "23/04/03 15:21:37 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
+      "23/07/02 08:28:28 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "23/07/02 08:28:29 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
      ]
     },
     {
@@ -55,7 +55,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://192.168.43.237:4041\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://192.168.1.6:4041\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -71,7 +71,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7fcea40ec430>"
+       "<pyspark.sql.session.SparkSession at 0x7f86bc1832e0>"
       ]
      },
      "execution_count": 2,
@@ -131,6 +131,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "\r",
+      "[Stage 0:>                                                          (0 + 1) / 1]\r",
+      "\r",
       "                                                                                \r"
      ]
     },
@@ -205,6 +208,26 @@
    ],
    "source": [
     "df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3716d325",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows=  5\n",
+      "Columns=  5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Rows= \",df.count())\n",
+    "print(\"Columns= \",len(df.columns))"
    ]
   },
   {
