Changes are added

--- a/Pyspark_Master/M3_Amateur/M1_Week6_SchemaInf.ipynb
+++ b/Pyspark_Master/M3_Amateur/M1_Week6_SchemaInf.ipynb
@@ -20,6 +20,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "90218d1c",
+   "metadata": {},
+   "source": [
+    "InferSchema"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a02812f7",
@@ -87,6 +95,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f2109b34",
+   "metadata": {},
+   "source": [
+    "Enforce Schema"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9100ab2a",
+   "metadata": {},
+   "source": [
+    "Method 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "36d60755",
@@ -130,6 +154,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9788ffd3",
+   "metadata": {},
+   "source": [
+    "Enforce Schema with wrong data type issues"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b81216eb",
@@ -170,6 +202,22 @@
    "outputs": [],
    "source": [
     "from pyspark.sql.types import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abe08c3b",
+   "metadata": {},
+   "source": [
+    "Enforce Schema "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c9bc4a8",
+   "metadata": {},
+   "source": [
+    "Method 2"
    ]
   },
   {
@@ -231,9 +279,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Pyspark 3",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pyspark3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -245,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
