--- a/Pyspark_Master/M3_Amateur/M1_Week6_SchemaInf.ipynb
+++ b/Pyspark_Master/M3_Amateur/M1_Week6_SchemaInf.ipynb
@@ -107,7 +107,7 @@
    "id": "9100ab2a",
    "metadata": {},
    "source": [
-    "Method 1"
+    "Method 1 : Schema DDL "
    ]
   },
   {
@@ -217,7 +217,7 @@
    "id": "3c9bc4a8",
    "metadata": {},
    "source": [
-    "Method 2"
+    "Method 2 : Structure Type"
    ]
   },
   {
