Adding the dataframe

--- a/Pyspark_Master/M3_Amateur/M3_Week6_readModes.ipynb
+++ b/Pyspark_Master/M3_Amateur/M3_Week6_readModes.ipynb
@@ -30,6 +30,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7db0777d",
+   "metadata": {},
+   "source": [
+    "1) Permissive"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "07bbd3b4",
@@ -76,6 +84,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "181c998d",
+   "metadata": {},
+   "source": [
+    "2) failfast"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "3ce4def7",
@@ -87,6 +103,14 @@
     ".schema(orders_schema) \\\n",
     ".option(\"mode\",\"failfast\") \\\n",
     ".load(\"/public/trendytech/datasets/orders_sample3.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05d80601",
+   "metadata": {},
+   "source": [
+    "3) dropmalformed"
    ]
   },
   {
