--- a/Pyspark_Master/M3_Amateur/M4_DifferentWaysOfDataFrame.ipynb
+++ b/Pyspark_Master/M3_Amateur/M4_DifferentWaysOfDataFrame.ipynb
@@ -20,6 +20,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "338c8470",
+   "metadata": {},
+   "source": [
+    "Method 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "d59b3fdb",
@@ -178,6 +186,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "85fec2ad",
+   "metadata": {},
+   "source": [
+    "Method 2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "066afd55",
@@ -231,6 +247,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "352e772c",
+   "metadata": {},
+   "source": [
+    "Method 3"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "4c01d6be",
@@ -281,6 +305,22 @@
    ],
    "source": [
     "df.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc6b52c7",
+   "metadata": {},
+   "source": [
+    "Method 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57a78c57",
+   "metadata": {},
+   "source": [
+    "we can create single column dataframe using range method"
    ]
   },
   {
@@ -346,6 +386,14 @@
    ],
    "source": [
     "! hadoop fs -cat /public/trendytech/retail_db/orders/part-00000 | head"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ea25b50",
+   "metadata": {},
+   "source": [
+    "Method 5"
    ]
   },
   {
@@ -420,6 +468,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "27621094",
+   "metadata": {},
+   "source": [
+    "Here we assiging the column names"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "id": "25408ff4",
@@ -475,6 +531,14 @@
    ],
    "source": [
     "orders_raw_df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d7f9375",
+   "metadata": {},
+   "source": [
+    "Here we assiging the column names in two line code"
    ]
   },
   {
@@ -558,6 +622,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "55e64142",
+   "metadata": {},
+   "source": [
+    "Here we assiging the column names with single line commands"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "id": "c2e93084",
@@ -623,6 +695,14 @@
    ],
    "source": [
     "df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "374c6173",
+   "metadata": {},
+   "source": [
+    "Here we assiging the columns names with date types"
    ]
   },
   {
@@ -749,9 +829,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Pyspark 3",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pyspark3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -763,7 +843,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
