--- a/Pyspark_Master/M3_Amateur/M6_Week6_nestedSchema.ipynb
+++ b/Pyspark_Master/M3_Amateur/M6_Week6_nestedSchema.ipynb
@@ -64,6 +64,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2379d42b",
+   "metadata": {},
+   "source": [
+    "Method 1 : Using schema DDL"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "fa5c3163",
@@ -130,6 +138,14 @@
    ],
    "source": [
     "df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a10b303",
+   "metadata": {},
+   "source": [
+    "Method 2 : Using Structure Type"
    ]
   },
   {
