--- a/Pyspark_Master/M3_Amateur/M5_Week6_RDD_to_DataFrame.ipynb
+++ b/Pyspark_Master/M3_Amateur/M5_Week6_RDD_to_DataFrame.ipynb
@@ -60,6 +60,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "806fb384",
+   "metadata": {},
+   "source": [
+    "Method 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "3df56dcc",
@@ -147,6 +155,14 @@
    "outputs": [],
    "source": [
     "new_df.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1f89f71",
+   "metadata": {},
+   "source": [
+    "Method 2"
    ]
   },
   {
