--- a/Pyspark_Master/M4_Intermediate/M1_Week7_cachePracticals.ipynb
+++ b/Pyspark_Master/M4_Intermediate/M1_Week7_cachePracticals.ipynb
@@ -87,6 +87,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "be584f13",
+   "metadata": {},
+   "source": [
+    "See the Spark UI that how many jobs and executor are there"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "8b17d51a",
@@ -131,6 +139,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9d7166ba",
+   "metadata": {},
+   "source": [
+    "See the Spark UI, click respective job and see how many stages and executors are there "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d5a671b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orders_df.count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c544ff1a",
+   "metadata": {},
+   "source": [
+    "click respective job and see how many stages and executors are there "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77e6c2e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orders_df.count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebed8790",
+   "metadata": {},
+   "source": [
+    "click respective job and see how many stages and executors are there "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "809b3914",
@@ -138,6 +190,22 @@
    "outputs": [],
    "source": [
     "orders_df_cached = orders_df.cache()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd85588b",
+   "metadata": {},
+   "source": [
+    "Note : If you applyed any cached See the Spark UI and under the storage tab"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ee9a205",
+   "metadata": {},
+   "source": [
+    "Here Only i partitions will be cached"
    ]
   },
   {
@@ -205,6 +273,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7e99393f",
+   "metadata": {},
+   "source": [
+    "Here All the partitions will be cached"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "af1490a6",
@@ -223,6 +299,33 @@
    ],
    "source": [
     "orders_df_cached.count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1e2c194",
+   "metadata": {},
+   "source": [
+    "If i perform cache again It will execute in less time  and \n",
+    "It is fast"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db30924a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orders_df_cached.count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09a6f5a5",
+   "metadata": {},
+   "source": [
+    "Uncached"
    ]
   },
   {
